--- a/src/FileGuardian.Api/FileGuardian.Api.csproj
+++ b/src/FileGuardian.Api/FileGuardian.Api.csproj
@@ -12,4 +12,9 @@
     <ProjectReference Include="..\FileGuardian.Infrastructure\FileGuardian.Infrastructure.csproj" />
   </ItemGroup>
 
+  <PropertyGroup>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <NoWarn>$(NoWarn);1591</NoWarn>
+  </PropertyGroup>
+
 </Project>
